k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tid-recon-dog
  labels:
    app.kubernetes.io/name: tid-recon-dog
    app.kubernetes.io/part-of: tid-recon-dog
